<resources>
    <string name="app_name">DemoPostData</string>
    <string name="enter_your_phone_number_in_order_to_send_you_your_otp_security_code">Enter your phone number in order to send you your OTP security code.</string>
    <string name="verify_continue"><![CDATA[Verify & Continue]]></string>
    <string name="skip_continue"><![CDATA[Skip & Continue]]></string>
    <string name="we_sent_a_6_digit_otp_on_your_number">We sent a 6 digit otp on your number</string>
    <string name="txt_resend_otp">Resend OTP</string>
    <string name="txt_categories">Categories</string>
    <string name="txt_top_rated_pandit_ji">Top Rated Pandit Ji</string>
    <string name="search_your_pandit_ji">Search Your Pandit Ji</string>
    <string name="no_record_found">No Record Found!</string>
    <string name="find_your">Find Your Desired \nPandit Ji \nAnytime,Anywhere</string>
</resources>