<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activities.impl.MainActivity">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

  <androidx.cardview.widget.CardView
      android:id="@+id/card_header"
      android:layout_width="match_parent"
      android:layout_height="250dp"
      android:layout_marginTop="-60dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:src="@color/purple_500"
          android:scaleType="centerCrop"
          android:foreground="@drawable/gredient_bg"
          android:contentDescription="@string/app_name" />
      <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/iv_user_photo"
          android:layout_width="55dp"
          android:layout_height="55dp"
          android:layout_alignParentEnd="true"
          android:layout_marginEnd="@dimen/dimen_16dp"
          android:layout_marginTop="75dp"
          app:civ_border_color="#33FFFFFF"
          app:civ_border_width="4dp"
          android:src="@mipmap/mask_profile"
          android:layout_alignParentRight="true"
          android:layout_marginRight="@dimen/dimen_16dp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="24sp"
          android:layout_marginTop="75dp"
          android:layout_marginStart="@dimen/dimen_16dp"
          android:layout_marginEnd="@dimen/dimen_16dp"
          android:textColor="@color/white"
          android:text="@string/find_your"/>
      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cardElevation="4sp"
          android:layout_alignParentBottom="true"
          app:cardUseCompatPadding="true"
          android:layout_marginStart="12dp"
          android:layout_marginEnd="12dp"
          android:layout_marginBottom="20dp"
          app:cardCornerRadius="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_your_pandit_ji"
            android:textSize="13sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center"
            android:background="@null"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"/>

      </androidx.cardview.widget.CardView>
    </RelativeLayout>


  </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/txt_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@+id/card_header"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/padding_8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_categories"/>
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_post"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/txt_categories" />

  <TextView
      android:id="@+id/txt_top"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="16sp"
      android:layout_below="@+id/rv_post"
      android:textColor="@color/black"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/txt_top_rated_pandit_ji"/>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_top_rated"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/txt_top"/>


  <ProgressBar
      android:id="@+id/progress_circular"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:layout_centerInParent="true"/>

  <TextView
      android:id="@+id/txt_no_record_found"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/no_record_found"
      android:padding="16dp"
      android:visibility="gone"
      android:layout_centerInParent="true"/>

  </RelativeLayout>

</androidx.core.widget.NestedScrollView>